fix styles for pregnancy alert on mobile

--- a/client/app/views/drug-profile/drug-profile.style.scss
+++ b/client/app/views/drug-profile/drug-profile.style.scss
@@ -32,6 +32,7 @@
 
   h1 {
     color: $fontGray;
+    font-size: 2.5em;
   }
 
   p {
@@ -104,6 +105,14 @@
       text-align: center;
     }
 
+    &.search-results {
+      .display-alert {
+        .drug-alert {
+          top: 38px;
+        }
+      }
+    }
+
     .card-fade {
       padding: 20px 20px 100px 20px;
     }
@@ -112,26 +121,13 @@
       padding: 20px;
     }
 
-    .rex-button {
-      width: 100%;
-      margin: 25px 0;
+    .drug-alert {
+      top: 0;
     }
 
-    .display-alert {
-      .drug-alert {
-        .icon-ic-pregnancy {
-          margin-left: -70px;
-        }
-
-        h3 {
-          font-size: 1.3em;
-          margin-top: 0;
-        }
-
-        p {
-          display: none;
-        }
-      }
+    .rex-button {
+      width: 100%;
+      margin-bottom: 15px;
     }
   }
 }
